--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+
+    <TextView
+        android:id="@+id/tv_raspberry_ip"
+        tools:text="192.168.1.1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
