--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@mipmap/splash</item>
+        <item name="android:scaleType">centerCrop</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
     <style name="HooliganActivityStyle" parent="Theme.AppCompat">
         <item name="android:windowBackground">@color/transParent</item>
         <item name="android:windowContentOverlay">@null</item>
