--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@mipmap/splash</item>
+        <item name="android:windowBackground">@drawable/bg_splash</item>
         <item name="android:scaleType">centerCrop</item>
         <item name="android:windowFullscreen">true</item>
     </style>
