--- a/app/src/main/res/layout/fragment_it_category.xml
+++ b/app/src/main/res/layout/fragment_it_category.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.qy.j4u.widget.SlideRecyclerView
+    <com.qy.j4u.widget.views.SlideRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
