--- a/app/src/main/res/layout/activity_coap.xml
+++ b/app/src/main/res/layout/activity_coap.xml
@@ -6,7 +6,7 @@
 
     <Button
         android:id="@+id/btn"
-        android:text="test"
+        android:text="静音"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
